--- a/ETL_Mini_Project_MBedino.ipynb
+++ b/ETL_Mini_Project_MBedino.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +194,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +240,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -257,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,18 +277,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +327,185 @@
        "      <th>deadline</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
-       "      <th>category &amp; sub-category</th>\n",
+       "      <th>catsubcat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>147</td>\n",
+       "      <td>4661</td>\n",
+       "      <td>Baldwin, Riley and Jackson</td>\n",
+       "      <td>Pre-emptive tertiary standardization</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CAD</td>\n",
+       "      <td>1581573600</td>\n",
+       "      <td>1614578400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>food/food trucks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1621</td>\n",
+       "      <td>3765</td>\n",
+       "      <td>Odom Inc</td>\n",
+       "      <td>Managed bottom-line architecture</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>14560</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>158</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1611554400</td>\n",
+       "      <td>1621918800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>music/rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1812</td>\n",
+       "      <td>4187</td>\n",
+       "      <td>Melton, Robinson and Fritz</td>\n",
+       "      <td>Function-based leadingedge pricing structure</td>\n",
+       "      <td>108400</td>\n",
+       "      <td>142523</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>1425</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>AUD</td>\n",
+       "      <td>1608184800</td>\n",
+       "      <td>1640844000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>technology/web</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2156</td>\n",
+       "      <td>4941</td>\n",
+       "      <td>Mcdonald, Gonzalez and Ross</td>\n",
+       "      <td>Vision-oriented fresh-thinking conglomeration</td>\n",
+       "      <td>4200</td>\n",
+       "      <td>2477</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>24</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1634792400</td>\n",
+       "      <td>1642399200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>music/rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1365</td>\n",
+       "      <td>2199</td>\n",
+       "      <td>Larson-Little</td>\n",
+       "      <td>Proactive foreground core</td>\n",
+       "      <td>7600</td>\n",
+       "      <td>5265</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>53</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1608530400</td>\n",
+       "      <td>1629694800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cf_id  contact_id                 company_name  \\\n",
+       "0    147        4661   Baldwin, Riley and Jackson   \n",
+       "1   1621        3765                     Odom Inc   \n",
+       "2   1812        4187   Melton, Robinson and Fritz   \n",
+       "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
+       "4   1365        2199                Larson-Little   \n",
+       "\n",
+       "                                           blurb    goal  pledged     outcome  \\\n",
+       "0           Pre-emptive tertiary standardization     100        0      failed   \n",
+       "1               Managed bottom-line architecture    1400    14560  successful   \n",
+       "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
+       "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
+       "4                      Proactive foreground core    7600     5265      failed   \n",
+       "\n",
+       "   backers_count country currency  launched_at    deadline  staff_pick  \\\n",
+       "0              0      CA      CAD   1581573600  1614578400       False   \n",
+       "1            158      US      USD   1611554400  1621918800       False   \n",
+       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
+       "3             24      US      USD   1634792400  1642399200       False   \n",
+       "4             53      US      USD   1608530400  1629694800       False   \n",
+       "\n",
+       "   spotlight         catsubcat  \n",
+       "0      False  food/food trucks  \n",
+       "1       True        music/rock  \n",
+       "2      False    technology/web  \n",
+       "3      False        music/rock  \n",
+       "4      False     theater/plays  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crowdfunding_info_df = crowdfunding_info_df.rename(columns={'category & sub-category': 'catsubcat'})\n",
+    "crowdfunding_info_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cf_id</th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>blurb</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>pledged</th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>backers_count</th>\n",
+       "      <th>country</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>launched_at</th>\n",
+       "      <th>deadline</th>\n",
+       "      <th>staff_pick</th>\n",
+       "      <th>spotlight</th>\n",
+       "      <th>catsubcat</th>\n",
        "      <th>category</th>\n",
        "      <th>subcategory</th>\n",
        "    </tr>\n",
@@ -450,45 +637,43 @@
        "3             24      US      USD   1634792400  1642399200       False   \n",
        "4             53      US      USD   1608530400  1629694800       False   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
-       "0      False        food/food trucks        food  food trucks  \n",
-       "1       True              music/rock       music         rock  \n",
-       "2      False          technology/web  technology          web  \n",
-       "3      False              music/rock       music         rock  \n",
-       "4      False           theater/plays     theater        plays  "
+       "   spotlight         catsubcat    category  subcategory  \n",
+       "0      False  food/food trucks        food  food trucks  \n",
+       "1       True        music/rock       music         rock  \n",
+       "2      False    technology/web  technology          web  \n",
+       "3      False        music/rock       music         rock  \n",
+       "4      False     theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[['category', 'subcategory']] = crowdfunding_info_df.catsubcat.str.split('/', expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['food' 'music' 'technology' 'theater' 'film & video' 'publishing' 'games'\n",
-      " 'photography' 'journalism']\n",
-      "['food trucks' 'rock' 'web' 'plays' 'documentary' 'electric music' 'drama'\n",
-      " 'indie rock' 'wearables' 'nonfiction' 'animation' 'video games' 'shorts'\n",
-      " 'fiction' 'photography books' 'radio & podcasts' 'metal' 'jazz'\n",
-      " 'translations' 'television' 'mobile games' 'world music'\n",
-      " 'science fiction' 'audio']\n"
+      "['food', 'music', 'technology', 'theater', 'film & video', 'publishing', 'games', 'photography', 'journalism']\n",
+      "['food trucks', 'rock', 'web', 'plays', 'documentary', 'electric music', 'drama', 'indie rock', 'wearables', 'nonfiction', 'animation', 'video games', 'shorts', 'fiction', 'photography books', 'radio & podcasts', 'metal', 'jazz', 'translations', 'television', 'mobile games', 'world music', 'science fiction', 'audio']\n"
      ]
     }
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
+    "categories = crowdfunding_info_df['category'].unique().tolist()\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique().tolist()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -496,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -516,30 +701,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 4 5 6 7 8 9]\n",
-      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]\n"
      ]
     }
    ],
    "source": [
     "# Create numpy arrays from 1-9 for the categories and 1-24 for the subcategories.\n",
-    "category_ids = np.arange(1, 10)\n",
-    "subcategory_ids = np.arange(1, 25)\n",
+    "category_id = np.arange(1, 10).tolist()\n",
+    "subcategory_id = np.arange(1, 25).tolist()\n",
     "\n",
-    "print(category_ids)\n",
-    "print(subcategory_ids)"
+    "print(category_id)\n",
+    "print(subcategory_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_ids = [str(x) for x in category_id]\n",
+    "sybcategory_ids = [str(x) for x in subcategory_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -553,28 +748,21 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
+    "mystring1 = 'cat'\n",
+    "mystring2 = 'subcat'\n",
+    "cat_ids = [mystring1 + x for x in category_ids]\n",
+    "scat_ids = [mystring2 + x for x in sybcategory_ids]\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
     "\n",
     "    \n",
     "print(cat_ids)\n",
-    "print(scat_ids)"
+    "print(scat_ids)\n",
+    "#print(scat_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
-    "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -665,18 +853,22 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "\n",
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "category_df = pd.DataFrame(list(zip(cat_ids, categories)), columns= ['category_id', 'category'])\n",
     "category_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -857,18 +1049,19 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "subcategory_df = pd.DataFrame(list(zip(scat_ids, subcategories)), columns= ['subcategory_id', 'subcategory'])\n",
     "subcategory_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3700,7 +3893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
